2010-02-01  vadim  <vadim@vk.crocodile.org>

	* ObjectManipulator.cpp (ObjectManipulator::updateCreateObjectMenu):
	fixes #1195 the GUI should enable "new object" button and menu
	item when objects_init.xml library is opened

	* platforms.cpp (isDefaultPolicyRuleOptions): fixes #1193 default
	setting for "Assume fw is part of any" per-rule option is "follow
	global"

	* ../src/res/os/linux24.xml: fixes #1192 "iptables script should
	skip virtual addresses configured on cluster interfaces while
	updating addresses of interfaces". The problem only affected
	cluster interfaces with VRRP failover protocol.

	* InterfaceEditorWidget.cpp (InterfaceEditorWidget::deleteAddress):
	fixes #1191 "broken behavior in InterfaceEditorWidget". When user
	added and then deleted bunch of ip addresses to an interface in
	the new firewall or new cluster wizard, addresses below the
	deleted row were ignored.

	* InterfaceEditorWidget.cpp (InterfaceEditorWidget::deleteAddress):
	fixes #1189 "GUI crash in newFirewall dialog upon completion".
	GUI crashed in the new firewall wizard if user deleted an address
	of an interface that had 3 or more addresses.

2010-01-31  vadim  <vadim@vk.crocodile.org>

	* NATCompiler_ipt.cpp (ReplaceFirewallObjectsTSrc::processNext):
	fixes #1185 "do not include member ip addresses for cluster NAT
	policies". For NAT rules in a cluster, make it use only cluster ip
	and ignore member ips.

	* PolicyCompiler_cisco_acls.cpp (setInterfaceAndDirectionBySrc::processNext):
	fixes #1187: "regression in compiler for PIX". Rules that have
	cluster or firewall object in src or dst that expands to a bunch
	of addresses that match network zones of different interfaces
	should still be assigned to the interface dictated by the
	combination of both src and dst. There is no need to add them to
	the ACL of inetrface 1 in direction "outbound" if destination
	belongs to the network zone of inetrface 2. Rule like that should